<resources>
    <string name="app_name">SpeedControl</string>
    <string name="comunicacion_de_su_dispositivo_con_modulo_bluetooth">Comunicación de su dispositivo con módulo bluetooth</string>
    <string name="nota_para_ver_su_dispositivo_deberia_primero_haber_establecido_conexion">Nota: para ver su dispositivo debería primero haber establecido conexión</string>
    <string name="seleccione_el_dispositivo_que_desee_parear">Seleccione el dispositivo que desee parear</string>
    <string name="solo_si_no_encontro_su_dispositivo">Sólo si no encontró su dispositivo</string>
    <string name="enviar">Enviar</string>
    <string name="escriba">Escriba</string>
    <string name="buecar_de_nuevo">buscar de nuevo</string>
    <string name="speedcontrol">SpeedControl</string>
    <string name="interfaz_de_comandos_y_conexi_n_bluetooth">Interfaz de comandos y conexión bluetooth</string>
    <string name="interfaz">Interfaz</string>
    <string name="bluetoothh">Bluetooth</string>
    <string name="se_all">Señal</string>
    <string name="salir">Salir</string>
    <string name="modificar_par_metros">Modificar Parámetros</string>
    <string name="graficar_y_guardar">Graficar y Guardar</string>
    <string name="zoom_normal">Zoom Normal</string>
    <string name="velocidad_de_19200_bps">Velocidad de 19200 bps</string>
    <string name="aplicar">Aplicar</string>
    <string name="aplicar_est_mulo">Aplicar Estímulo</string>
    <string name="anular">Anular</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="cerrar_lazo">Cerrar Lazo</string>
    <string name="abrir_lazo">Abrir Lazo</string>
    <string name="zoom_in">Zoom In</string>
    <string name="tau">Tau</string>
    <string name="ki">Ki</string>
    <string name="t_graf">T graf</string>
    <string name="delta_referencia">Delta Referencia</string>
    <string name="kp">Kp</string>
    <string name="g5">G5</string>
    <string name="comenzar">Comenzar</string>
    <string name="g2">G2</string>
    <string name="g3">G3</string>
    <string name="quitar_est_mulo">Quitar Estímulo</string>
    <string name="g4">G4</string>
    <string name="se_al">Señal</string>
    <string name="g1">G1</string>
    <string name="velocidad_de_57600_bps">Velocidad de 57600 bps</string>
    <string name="regresarr">Regresar</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="nota_antes_de_salir_en_el_men_seleccione_desconectar_para_cortar_comunicaci_n_con_el_dispositivo">Nota: Antes de salir, en el menú seleccione Desconectar para cortar comunicación con el dispositivo</string>
    <string name="escribaa">Escriba</string>
    <string name="enviarr">Enviar</string>
    <string name="regresar">Regresar</string>
    <color name="bg">#C0C0C0</color>

</resources>
